k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emp-ingress
  namespace: emp-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: emp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emp-app-service
                port:
                  name: http
